--- a/styles.css
+++ b/styles.css
@@ -14,17 +14,7 @@
     font-family: 'Roboto Bold';
     src: url(/assets/fonts/Roboto-Bold.ttf) format("truetype");
 }
-.attribution { font-size: 11px; 
-    text-align: center;
-    position: absolute;
-    bottom: 10px;
-    width: 100%;
-   }
-  .attribution a {
-     color: var(--neutral-white);
-}
   body {
-    overflow: hidden;
     background-color: var(--neutral-charcoal-grey);
   }
   .sign_up_container {
@@ -38,22 +28,22 @@
     background-color: var(--neutral-white);
     border-radius: 20px;
     display: flex;
-  }
-
-  .sign_up_container_section {
-    width: 50%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+    box-sizing: border-box;
   }
 
   .sign_up_img {
     position: absolute;
     right: 20px;
-    top : 25px;
+    top : 20px;
+    width: 40%;
+    height: 90%;
 }
 
 .sign_up_container_content {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     margin-top: 100px;
     margin-left: 50px;
 }
@@ -149,3 +139,66 @@ label {
 .button_margin_top {
     margin-top: 50px;
 }
+ 
+@media screen and (max-width: 1000px) {
+    * {
+        box-sizing: border-box;
+    }
+    .sign_up_container {
+      position: static;
+      transform: none;
+      height: 100vh;
+      width: 100vw;
+      display: flex;
+      flex-direction: column-reverse;
+      border-radius: 0px;
+      overflow: hidden;
+    }
+    .sign_up_container_content{
+        width: 100%;
+        height: calc(100% - 280px);
+        margin-top: 0px;
+        margin-left: 0px;
+        padding-left: 20px;
+    }
+    .sign_up_img {
+        position: static;
+        width: 100vw;
+        height: 280px;
+        object-fit: cover;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+    }
+    form {
+        margin-top: 0px;
+    }
+    .email_input {
+        width: 80%;
+        height: 40px;
+        border: 1px solid var(--neutral-charcoal-grey-light);
+        border-radius: 8px;
+        margin-bottom: 10px;
+        padding-left: 20px;
+    }
+    
+    .submit_button {
+        width: 90%;
+        height: 40px;
+        border: 1px solid var(--neutral-charcoal-grey-light);
+        border-radius: 8px;
+        cursor: pointer;
+        color: var(--neutral-white);
+        background-color: var(--neutral-dark-slate-grey);
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    .success_container {
+        position: static;
+        height: 100vh;
+        width: 100vw;
+        transform: none;
+        border: 0px;
+        border-radius: 0px;
+    }
+  }
